--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
